--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
-    <title>wxn0.xyz</title>
+    <title>Explorer - wxn0.xyz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,10 +14,10 @@
         <div id="output"></div>
         <div id="input-line">
             <span class="prompt">></span>
-            <input type="text" id="input" autofocus />
+            <input type="text" id="input" autofocus autocomplete="off" />
         </div>
     </div>
-    <script src="/dist/index.js"></script>
+    <script src="./dist/index.js"></script>
 </body>
 
 </html>
