--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <!-- Have a nice day -->
+    <!-- Remember: do NOT cheat -->
+    <noscript>This page requires JavaScript to work.</noscript>
     <div id="terminal">
         <div id="output"></div>
         <div id="input-line">
