--- a/public/index.html
+++ b/public/index.html
@@ -18,23 +18,27 @@
     <div id="page">
         <div class="container">
             <header>
-                <h1>wxn0</h1>
+                <h1>wxn0.xyz</h1>
                 <p>Software developer & security enthusiast</p>
             </header>
             <section class="links">
                 <h2>Find me on</h2>
                 <ul>
-                    <li><a href="https://wxn0brp.github.io" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="https://github.com/wxn0brP" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                    <li><a href="https://wxn0brp.github.io" target="_blank">Developer Website</a></li>
+                    <li><a href="https://github.com/wxn0brP" target="_blank">GitHub</a></li>
                 </ul>
             </section>
             <section class="projects">
                 <h2>Projects</h2>
                 <ul>
-                    <li><a href="https://github.com/wxn0brP/ValtheraDB" target="_blank"
-                            rel="noopener noreferrer">ValtheraDB</a> - A high-performance database.</li>
-                    <li><a href="https://github.com/wxn0brP/VQL" target="_blank" rel="noopener noreferrer">VQL</a> - A
-                        query language for ValtheraDB.</li>
+                    <li>
+                        <a href="https://github.com/wxn0brP/ValtheraDB" target="_blank">ValtheraDB</a>
+                        - A high-performance database.
+                    </li>
+                    <li>
+                        <a href="https://github.com/wxn0brP/VQL" target="_blank">VQL</a>
+                        - A query language for ValtheraDB.
+                    </li>
                 </ul>
             </section>
             <footer>
