--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
-    <title>Explorer - wxn0.xyz</title>
+    <title>Homepage - wxn0.xyz</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="page.css" id="style">
     <link rel="stylesheet" href="glitch.css" id="glitch-style">
@@ -15,34 +15,79 @@
     <!-- Have a nice day -->
     <!-- Remember: do NOT cheat -->
 
+    <canvas id="bg-effect"></canvas>
     <div id="page">
         <div class="container">
             <header>
-                <h1>wxn0.xyz</h1>
+                <h1 id="typewriter"></h1>
                 <p>Software developer & security enthusiast</p>
+                <div class="status-indicator">
+                    <span class="status-dot"></span>
+                    <span class="status-text">Boot Sequence</span>
+                </div>
             </header>
-            <section class="links">
-                <h2>Find me on</h2>
-                <ul>
-                    <li><a href="https://wxn0brp.github.io" target="_blank">Developer Website</a></li>
-                    <li><a href="https://github.com/wxn0brP" target="_blank">GitHub</a></li>
-                </ul>
+
+            <section class="about">
+                <h2>About Me</h2>
+                <p>
+                    Software developer & security enthusiast.
+                    Exploring the depths of digital security and building high-performance systems.
+                </p>
             </section>
+
+            <section class="skills">
+                <h2>Tech Stack</h2>
+                <div class="chip-container">
+                    <span class="chip">TypeScript</span>
+                    <span class="chip">Bun</span>
+                    <span class="chip">JavaScript</span>
+                    <span class="chip">Node.js</span>
+                    <span class="chip">Linux</span>
+                    <span class="chip">Docker</span>
+                </div>
+            </section>
+
             <section class="projects">
-                <h2>Projects</h2>
+                <h2>Key Projects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <h3>
+                            <a href="https://github.com/wxn0brP/ValtheraDB" target="_blank">ValtheraDB</a>
+                        </h3>
+                        <p>A high-performance, distributed key-value store built for speed and resilience.</p>
+                        <div class="card-meta">Database - VQL</div>
+                    </div>
+                    <div class="project-card">
+                        <h3>
+                            <a href="https://github.com/wxn0brP/VQL" target="_blank">VQL</a>
+                        </h3>
+                        <p>A specialized query language designed specifically for ValtheraDB interactions.</p>
+                        <div class="card-meta">Language Design - VQL</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="links">
+                <h2>Connect</h2>
                 <ul>
                     <li>
-                        <a href="https://github.com/wxn0brP/ValtheraDB" target="_blank">ValtheraDB</a>
-                        - A high-performance database.
+                        <a href="https://wxn0brp.github.io" target="_blank">Developer Website</a>
                     </li>
                     <li>
-                        <a href="https://github.com/wxn0brP/VQL" target="_blank">VQL</a>
-                        - A query language for ValtheraDB.
+                        <a href="https://github.com/wxn0brP" target="_blank">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)" class="glitch-hover" data-text="Encrypted Channel">
+                            Encrypted Channel
+                        </a>
+                        <span class="muted">(Offline)</span>
                     </li>
                 </ul>
             </section>
+
             <footer>
                 <p id="stick">Stick around, something might happen...</p>
+                <div class="version">v2.0.4-build.99</div>
             </footer>
         </div>
     </div>
