--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <h2>About Me</h2>
                 <p>
                     Software developer & security enthusiast.
-                    Exploring the depths of digital security and building high-performance systems.
+                    Exploring the depths of
+                    <span class="glitch-color">digital security and building high-perfo</span>rmance systems.
                 </p>
             </section>
 
@@ -39,7 +40,7 @@
                 <h2>Tech Stack</h2>
                 <div class="chip-container">
                     <span class="chip">TypeScript</span>
-                    <span class="chip">Bun</span>
+                    <span class="chip glitch-color">Bun</span>
                     <span class="chip">JavaScript</span>
                     <span class="chip">Node.js</span>
                     <span class="chip">Linux</span>
@@ -61,7 +62,9 @@
                         <h3>
                             <a href="https://github.com/wxn0brP/VQL" target="_blank">VQL</a>
                         </h3>
-                        <p>A specialized query language designed specifically for ValtheraDB interactions.</p>
+                        <p class="glitch-color">
+                            A specialized query language designed specifically for ValtheraDB interactions.
+                        </p>
                         <div class="card-meta">Language Design - VQL</div>
                     </div>
                 </div>
@@ -74,7 +77,7 @@
                         <a href="https://wxn0brp.github.io" target="_blank">Developer Website</a>
                     </li>
                     <li>
-                        <a href="https://github.com/wxn0brP" target="_blank">GitHub</a>
+                        <a href="https://github.com/wxn0brP" target="_blank" class="glitch-color">GitHub</a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" class="glitch-hover" data-text="Encrypted Channel">
