--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
             <section class="about">
                 <h2>About Me</h2>
+                <button onclick="this.remove()">Click Me! I dare you.</button>
                 <p>
                     Software developer & security enthusiast.
                     Exploring the depths of
