--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Homepage - wxn0.xyz</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="page.css" id="style">
-    <link rel="stylesheet" href="glitch.css" id="glitch-style">
+    <link rel="stylesheet" href="glitch.css">
 </head>
 
 <body>
