--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
-    <title>Homepage - wxn0.xyz</title>
+    <title>wxn0brP - Software Developer | Creator of ValtheraDB & VQL</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Portfolio of wxn0brP, hobbyist software developer and security enthusiast. Creator of ValtheraDB – modular embedded database for TypeScript/Node.js/Bun with pluggable storage engines – and VQL query language. Expertise in lightweight, high-performance systems.">
+    <meta name="author" content="wxn0brP">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://wxn0.xyz/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://wxn0.xyz/">
+    <meta property="og:title" content="wxn0brP - Creator of ValtheraDB & VQL | Software Developer Portfolio">
+    <meta property="og:description"
+        content="Hobbyist developer building modular, lightweight tools in TypeScript. Explore ValtheraDB (embedded database) and VQL query language for high-performance applications.">
+    <meta property="og:image" content="https://wxn0.xyz/favicon.ico">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://wxn0.xyz/">
+    <meta property="twitter:title" content="wxn0brP - Creator of ValtheraDB & VQL | Software Developer Portfolio">
+    <meta property="twitter:description"
+        content="Hobbyist developer building modular, lightweight tools in TypeScript. Explore ValtheraDB (embedded database) and VQL query language.">
+    <meta property="twitter:image" content="https://wxn0.xyz/favicon.ico">
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="page.css" id="style">
     <link rel="stylesheet" href="glitch.css">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "wxn0brP",
+      "url": "https://wxn0.xyz/",
+      "sameAs": [
+        "https://github.com/wxn0brP",
+        "https://wxn0brp.github.io"
+      ],
+      "jobTitle": "Hobbyist Software Developer & Security Enthusiast",
+      "knowsAbout": [
+        "TypeScript",
+        "Bun",
+        "Node.js",
+        "Embedded Databases",
+        "Modular Systems",
+        "ValtheraDB",
+        "VQL",
+        "Database Design",
+        "Query Languages",
+        "Linux",
+        "Docker",
+        "Cybersecurity"
+      ],
+      "description": "Hobbyist developer focused on lightweight, modular tools. Creator of ValtheraDB (modular embedded database) and VQL query language for high-performance, developer-controlled data storage."
+    }
+    </script>
 </head>
 
 <body>
