--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description"
-        content="Portfolio of wxn0brP, hobbyist software developer and security enthusiast. Creator of ValtheraDB – modular embedded database for TypeScript/Node.js/Bun with pluggable storage engines – and VQL query language. Expertise in lightweight, high-performance systems.">
+        content="wxn0brP - hobbyist dev. Creator of ValtheraDB & VQL, focused on lightweight, high-performance systems">
     <meta name="author" content="wxn0brP">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://wxn0.xyz/">
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://wxn0.xyz/">
     <meta property="og:title" content="wxn0brP - Creator of ValtheraDB & VQL | Software Developer Portfolio">
     <meta property="og:description"
-        content="Hobbyist developer building modular, lightweight tools in TypeScript. Explore ValtheraDB (embedded database) and VQL query language for high-performance applications.">
+        content="wxn0brP - hobbyist dev. Creator of ValtheraDB & VQL, focused on lightweight, high-performance systems.">
     <meta property="og:image" content="https://wxn0.xyz/favicon.ico">
 
     <!-- Twitter -->
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://wxn0.xyz/">
     <meta property="twitter:title" content="wxn0brP - Creator of ValtheraDB & VQL | Software Developer Portfolio">
     <meta property="twitter:description"
-        content="Hobbyist developer building modular, lightweight tools in TypeScript. Explore ValtheraDB (embedded database) and VQL query language.">
+        content="wxn0brP - hobbyist dev. Creator of ValtheraDB & VQL, focused on lightweight, high-performance systems.">
     <meta property="twitter:image" content="https://wxn0.xyz/favicon.ico">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -60,7 +60,7 @@
         "Docker",
         "Cybersecurity"
       ],
-      "description": "Hobbyist developer focused on lightweight, modular tools. Creator of ValtheraDB (modular embedded database) and VQL query language for high-performance, developer-controlled data storage."
+      "description": "wxn0brP - hobbyist dev. Creator of ValtheraDB & VQL, focused on lightweight, high-performance systems."
     }
     </script>
 </head>
