--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div id="terminal" style="display: none;">
         <div id="output"></div>
         <div id="input-line">
-            <span class="prompt">></span>
+            <span class="prompt"></span>
             <input type="text" id="input" autofocus autocomplete="off" />
         </div>
     </div>
