--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <h3>
                             <a href="https://github.com/wxn0brP/ValtheraDB" target="_blank">ValtheraDB</a>
                         </h3>
-                        <p>A high-performance, distributed key-value store built for speed and resilience.</p>
+                        <p>A lightweight, embedded, and high-performance database.</p>
                         <div class="card-meta">Database - VQL</div>
                     </div>
                     <div class="project-card">
