feat: news paper

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
       "description": "wxn0brP - hobbyist dev. Creator of ValtheraDB & VQL, focused on lightweight, high-performance systems."
     }
     </script>
+    <link rel="stylesheet" href="https://wxn0brp.github.io/paper/style.css">
 </head>
 
 <body>
@@ -170,6 +171,7 @@
     </div>
     <script src="./bg.js"></script>
     <script src="./dist/shake.js"></script>
+    <script src="https://wxn0brp.github.io/paper/dist/load.js"></script>
 </body>
 
 </html>
